chore: enhance .gitignore and remove runtime files
- Remove runtime-generated session and log files
- Remove error_ledger.json (runtime state)
- Keep only source code and documentation
- Enhance .gitignore with comprehensive patterns

--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,14 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
+.PythonEnv
 
 # Virtual environments
 venv/
 ENV/
 env/
+.venv/
 
 # IDE
 .vscode/
@@ -55,13 +58,46 @@ env/
 *.swp
 *.swo
 *~
+.project
+.pydevproject
+.settings/
 
 # Logs
 *.log
+logs/
 
 # Local configuration
 .env
 .env.local
+*.local
 
 # Cache
 .cache/
+*.cache
+
+# Runtime generated files (should not be in public repo)
+.aether/error_ledger.json
+.aether/checkpoints/
+.aether/work/
+.aether/examples/
+.aether/stdlib/
+.ralph/.call_count
+.ralph/.circuit_breaker_history
+.ralph/.circuit_breaker_state
+.ralph/.exit_signals
+.ralph/.last_reset
+.ralph/.ralph_session
+.ralph/.ralph_session_history
+.ralph/logs/
+.ralph/progress.json
+.ralph/status.json
+.ralph/ralph_status.sh
+.ralph/watch_ralph.sh
+.ralph/watch_research.sh
+
+# Keep example configs but ignore runtime state
+.ralphrc.example
+
+# Session files
+*.session
+*.session.json
