chore(35-02): delete old worker files
- Remove architect-ant.md, builder-ant.md, colonizer-ant.md
- Remove route-setter-ant.md, scout-ant.md, watcher-ant.md
- Remove empty .aether/workers/ directory
- 1,866 lines deleted (6 files consolidated into workers.md)

--- a/.planning/config.json
+++ b/.planning/config.json
@@ -3,6 +3,6 @@
   "depth": "standard",
   "parallelization": "parallel",
   "created_at": "2025-02-01",
-  "updated_at": "2026-02-04",
-  "project": "Aether v4.4: Colony Hardening & Real-World Readiness"
+  "updated_at": "2026-02-06",
+  "project": "Aether v5.1: System Simplification"
 }
