--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "postinstall": "node bin/cli.js install --quiet"
+    "postinstall": "node bin/cli.js install --quiet",
+    "lint:shell": "shellcheck --severity=error .aether/aether-utils.sh runtime/aether-utils.sh bin/generate-commands.sh .aether/utils/file-lock.sh .aether/utils/atomic-write.sh .aether/utils/colorize-log.sh .aether/utils/watch-spawn-tree.sh runtime/utils/file-lock.sh runtime/utils/atomic-write.sh runtime/utils/colorize-log.sh runtime/utils/watch-spawn-tree.sh",
+    "lint:json": "node -e \"const fs=require('fs'); const files=['.aether/data/constraints.json','.aether/data/COLONY_STATE.json']; files.forEach(f=>{JSON.parse(fs.readFileSync(f,'utf8'))}); console.log('JSON valid')\"",
+    "lint:sync": "bash bin/generate-commands.sh check",
+    "lint": "npm run lint:shell && npm run lint:json && npm run lint:sync"
   },
   "keywords": [
     "claude-code",
