aether-milestone: phase 1 complete -- replace all ~/.aether/ paths with repo-relative .aether/ across 50 files

--- a/src/commands/_meta/template.yaml
+++ b/src/commands/_meta/template.yaml
@@ -25,7 +25,7 @@ content: |
 
   Use the Bash tool to run:
   ```bash
-  bash ~/.aether/aether-utils.sh some-command
+  bash .aether/aether-utils.sh some-command
   ```
 
   ### Step 3: Update State
