feat(model-profiles): reassign architect and route_setter
- Architect → glm-5 (pattern synthesis, documentation coordination)
- Route Setter → kimi-k2.5 (structured planning, 256K context)

Rationale: GLM-5 excels at execution with guidance; Architect needs
to synthesize patterns and coordinate documentation (execution work).
Route Setter needs structured output and large context for planning.

--- a/.aether/model-profiles.yaml
+++ b/.aether/model-profiles.yaml
@@ -14,9 +14,9 @@ worker_models:
   archaeologist: glm-5   # Historical pattern recognition across long timeframes
 
   # Planning and architecture castes: system design, decomposition
-  architect: minimax-2.5 # Architectural-level planning, system design (80.2% SWE-Bench)
+  architect: glm-5       # Pattern synthesis, documentation coordination (200K context)
   oracle: minimax-2.5    # Research, foresight, browse/search (76.3% BrowseComp)
-  route_setter: minimax-2.5 # Task decomposition, efficient planning (20% fewer search rounds)
+  route_setter: kimi-k2.5 # Task decomposition, structured planning (256K context)
 
   # Implementation and validation castes: coding, testing, exploration
   builder: kimi-k2.5     # Code generation, refactoring (76.8% SWE-Bench, 256K context)
