--- a/.aether/model-profiles.yaml
+++ b/.aether/model-profiles.yaml
@@ -1,88 +1,100 @@
-# Aether Colony Model Profiles
-# Maps worker castes to optimal LLM models via LiteLLM proxy
-# Proxy endpoint: http://localhost:4000
-
-version: "1.0"
-description: "Default model assignments for Aether colony workers"
+version: '1.0'
+description: Default model assignments for Aether colony workers
 profile: default
-
-# Caste-to-model mappings
-# Models are routed through LiteLLM proxy at localhost:4000
 worker_models:
-  # Long-horizon reasoning castes: coordination, historical analysis
-  prime: glm-5           # Long-horizon coordination, strategic planning (200K context)
-  archaeologist: glm-5   # Historical pattern recognition across long timeframes
-
-  # Planning and architecture castes: system design, decomposition
-  architect: glm-5       # Pattern synthesis, documentation coordination (200K context)
-  oracle: minimax-2.5    # Research, foresight, browse/search (76.3% BrowseComp)
-  route_setter: kimi-k2.5 # Task decomposition, structured planning (256K context)
-
-  # Implementation and validation castes: coding, testing, exploration
-  builder: kimi-k2.5     # Code generation, refactoring (76.8% SWE-Bench, 256K context)
-  watcher: kimi-k2.5     # Validation, testing, verification
-  scout: kimi-k2.5       # Research exploration, can spawn parallel sub-agents
-  chaos: kimi-k2.5       # Edge case probing, resilience testing
-  colonizer: kimi-k2.5   # Environment setup, visual coding from screenshots
-
-# Model metadata for routing decisions
+  prime: glm-5
+  archaeologist: glm-5
+  architect: glm-5
+  oracle: minimax-2.5
+  route_setter: kimi-k2.5
+  builder: kimi-k2.5
+  watcher: kimi-k2.5
+  scout: kimi-k2.5
+  chaos: kimi-k2.5
+  colonizer: kimi-k2.5
 model_metadata:
   glm-5:
-    description: "744B MoE model (40B active), long-horizon agentic engineering"
-    provider: "z_ai"
-    capabilities: [planning, coordination, long_context, complex_reasoning, agentic_workflows]
+    description: '744B MoE model (40B active), long-horizon agentic engineering'
+    provider: z_ai
+    capabilities:
+      - planning
+      - coordination
+      - long_context
+      - complex_reasoning
+      - agentic_workflows
     context_window: 200000
-    speed: "medium"
-    cost_tier: "high"
+    speed: medium
+    cost_tier: high
     best_for:
-      - "Long-horizon task execution (tested: 1 year business simulation)"
-      - "Strategic coordination and planning"
-      - "Historical pattern analysis across large contexts"
-      - "Multi-step autonomous workflows"
-
+      - 'Long-horizon task execution (tested: 1 year business simulation)'
+      - Strategic coordination and planning
+      - Historical pattern analysis across large contexts
+      - Multi-step autonomous workflows
   minimax-2.5:
-    description: "Frontier model for architectural planning and agentic tool use"
-    provider: "minimax"
-    capabilities: [system_design, architecture, browse, search, task_decomposition]
+    description: Frontier model for architectural planning and agentic tool use
+    provider: minimax
+    capabilities:
+      - system_design
+      - architecture
+      - browse
+      - search
+      - task_decomposition
     context_window: 200000
-    speed: "fast"
-    cost_tier: "medium"
+    speed: fast
+    cost_tier: medium
     best_for:
-      - "Architectural-level planning and system design"
-      - "Research with browse/search (76.3% BrowseComp)"
-      - "Efficient task decomposition (20% fewer search rounds)"
-      - "Full-stack development (80.2% SWE-Bench Verified)"
-
+      - Architectural-level planning and system design
+      - Research with browse/search (76.3% BrowseComp)
+      - Efficient task decomposition (20% fewer search rounds)
+      - Full-stack development (80.2% SWE-Bench Verified)
   kimi-k2.5:
-    description: "1T MoE model (32B active), multimodal agent with swarm capabilities"
-    provider: "kimi"
-    capabilities: [coding, multimodal, agent_swarm, visual_coding, validation]
+    description: '1T MoE model (32B active), multimodal agent with swarm capabilities'
+    provider: kimi
+    capabilities:
+      - coding
+      - multimodal
+      - agent_swarm
+      - visual_coding
+      - validation
     context_window: 256000
-    speed: "fast"
-    cost_tier: "low"
+    speed: fast
+    cost_tier: low
     best_for:
-      - "Code generation and refactoring (76.8% SWE-Bench)"
-      - "Visual coding (screenshots to code)"
-      - "Parallel exploration (up to 100 sub-agents)"
-      - "Validation and testing workflows"
-
-# Task-based routing hints
-# Override caste defaults based on task keywords
+      - Code generation and refactoring (76.8% SWE-Bench)
+      - Visual coding (screenshots to code)
+      - Parallel exploration (up to 100 sub-agents)
+      - Validation and testing workflows
 task_routing:
-  default_model: "kimi-k2.5"
+  default_model: kimi-k2.5
   complexity_indicators:
     complex:
-      keywords: ["design", "architecture", "plan", "coordinate", "synthesize", "strategize", "optimize"]
-      model: "glm-5"
+      keywords:
+        - design
+        - architecture
+        - plan
+        - coordinate
+        - synthesize
+        - strategize
+        - optimize
+      model: glm-5
     simple:
-      keywords: ["implement", "code", "refactor", "write", "create"]
-      model: "kimi-k2.5"
+      keywords:
+        - implement
+        - code
+        - refactor
+        - write
+        - create
+      model: kimi-k2.5
     validate:
-      keywords: ["test", "validate", "verify", "check", "review", "audit"]
-      model: "minimax-2.5"
-
-# Proxy configuration reference
+      keywords:
+        - test
+        - validate
+        - verify
+        - check
+        - review
+        - audit
+      model: minimax-2.5
 proxy:
-  endpoint: "http://localhost:4000"
-  auth_token: "sk-litellm-local"
-  health_check: "http://localhost:4000/health"
+  endpoint: 'http://localhost:4000'
+  auth_token: sk-litellm-local
+  health_check: 'http://localhost:4000/health'
