fix: distribute full .aether/ structure to hub, not just runtime/
The hub (~/.aether/) now mirrors the complete .aether/ directory structure
from the repo, rather than just the runtime/ subset:

- Updated package.json files[] to include .aether/ (not just runtime/)
- Updated cli.js setupHub() to sync full .aether/ to hub
- Added syncAetherToHub() with exclusion for user data dirs
- Added cleanup of legacy system/, .aether/, visualizations/ directories
- Updated update-transaction.js to work with new hub structure
- Removed HUB_SYSTEM, HUB_VISUALIZATIONS references
- User data (data/, dreams/, checkpoints/, locks/, temp/) excluded from sync

This ensures the /ant:oracle command and all other .aether/ resources
are properly distributed to the hub and available after 'aether update'.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     ".opencode/commands/ant/",
     ".opencode/agents/",
     ".opencode/opencode.json",
-    "runtime/",
-    ".aether/visualizations/",
+    ".aether/",
     "README.md",
     "LICENSE",
     "DISCLAIMER.md",
