--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ".opencode/commands/ant/",
     ".opencode/agents/",
     ".opencode/opencode.json",
-    ".aether/",
+    "runtime/",
     "README.md",
     "LICENSE",
     "DISCLAIMER.md",
