feat(20-01): restructure npm packaging — direct .aether/ distribution
- Bump version 3.1.19 -> 4.0.0 (major: removes runtime/ staging)
- Replace runtime/ in files[] with .aether/ for direct packaging
- Replace sync-to-runtime.sh with validate-package.sh in lifecycle scripts
- Remove postpublish rm -rf runtime/ (no longer needed)
- Update .npmignore: remove blanket .aether/ exclusion, add specific private dir exclusions
- Create .aether/.npmignore: subdirectory-level ignore for npm-packlist (npm 11 behavior)
- Update .gitignore: remove runtime/ entry and comments
- Create bin/validate-package.sh: required-files check, private-data guard, --dry-run mode
- Remove runtime/**/* from checkpoint-allowlist.json

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,34 @@
 # Planning and development
 .planning/
-.aether/
 .ralph/
 .cache/
 .git/
+
+# Aether private directories (never publish)
+.aether/data/
+.aether/dreams/
+.aether/oracle/
+.aether/checkpoints/
+.aether/locks/
+.aether/temp/
+.aether/archive/
+.aether/chambers/
+.aether/examples/
+.aether/__pycache__/
+
+# Aether private files (never publish)
+.aether/ledger.jsonl
+.aether/manifest.json
+.aether/registry.json
+.aether/version.json
+.aether/HANDOFF.md
+.aether/HANDOFF_AETHER_DEV_2026-02-15.md
+.aether/PHASE-0-ANALYSIS.md
+.aether/DIAGNOSIS_PROMPT.md
+.aether/RESEARCH-SHARED-DATA.md
+.aether/diagnose-self-reference.md
+.aether/pheromone_system.py
+.aether/semantic_layer.py
 
 # Claude Code - exclude only what shouldn't be published
 .claude/settings.local.json
