feat(27-01): wire package.json and cli.js for agent distribution
- Add .claude/agents/ant/ to package.json files array
- Add HUB_AGENTS_CLAUDE constant (agents-claude hub path)
- Add agents-claude mkdir in setupHub() directory creation
- Sync .claude/agents/ant/ to hub in setupHub() via syncDirWithCleanup
- Add .claude/agents/ant/** to CHECKPOINT_ALLOWLIST
- Add .claude/agents/ant to updateRepo() targetDirs
- Wire agents_claude/agentsClaude counts in updateRepo() display block

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "files": [
     "bin/",
     ".claude/commands/ant/",
+    ".claude/agents/ant/",
     ".opencode/commands/ant/",
     ".opencode/agents/",
     ".opencode/opencode.json",
